# damselfish

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  config.example.yml  pyproject.toml
damselfish/: __init__.py  app.py  cli.py  cloud_memory.py  config.py  git_sync.py  git_sync_new.py  monitor.py  nodes.py  router.py  selector.py  store.py  tokens.py
damselfish/static/: nodes.html
deploy/beijing/: config.yml  damselfish.service  nginx-location.conf  nginx.conf
docs/superpowers/plans/: 2026-07-21-streaming-parallel-fallback-plan.md  2026-07-22-context-limit-test-plan.md
docs/superpowers/specs/: 2026-07-21-streaming-parallel-fallback-design.md
scripts/: sync_free_models.py
sessions/: 2026-07-22-context-limit-fix.md  2026-07-24-auto-routing-glm-5.2-investigation.md
tests/: test_app.py  test_git_sync.py  test_nodes.py  test_router.py  test_selector.py  test_store.py  test_tokens.py
