[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "damselfish-router"
version = "0.1.0"
description = "Local-first intelligent router for free OpenAI-compatible model APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
damselfish = "damselfish.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["damselfish"]
